# pdf2djvu

./: .gitignore  .hgignore  .hgsigs  .hgtags  .mailmap  .travis.yml  Makefile  Makefile.common.in  Makefile.dep  Makefile.in  README  README.build  README.cygwin  acinclude.m4  array.hh  autoconf.mk.in  compoppler.cc  compoppler.h  compoppler.hh  config.cc  config.h  config.hh  configure.ac  const-adapter.hh  debug.cc  debug.h  debug.hh  djvu-const.hh  djvu-outline.cc  djvu-outline.hh  djvuconst.hh  i18n.cc  i18n.hh  image-filter.cc  image-filter.hh  main.cc  pdf-backend.cc  pdf-backend.hh  pdf-document-map.cc  pdf-document-map.hh  (+35 more)
.github/workflows/: ci.yml
debian/: changelog  control  copyright  install  manpages  rules  watch
doc/: Makefile  Makefile.common  README  README.build  README.cygwin  README.win32  build-depends.txt  build-reqs.txt  changelog  changelog.txt  cjk.txt  credits  credits.txt  djvudigital  djvudigital.txt  manpage.xml  pdf2djvu.xml  win32-port.txt
doc/po/: Makefile  de.po  fr.po  pdf2djvu.de.po  pdf2djvu.fr.po  pdf2djvu.pl.po  pdf2djvu.pt.po  pdf2djvu.ru.po  pdf2djvu.uk.po  pdf2djvu.xml  pl.po  po4a.conf  pt.po  ru.po  uk.po
po/: Makefile  Makefile.in  de.po  pl.po  pt.po  ru.po  uk.po
private/: announce-release  apt-install-build-reqs  autoclean  autogen  build-source-tarball  check-po  check-rst  clang-tidy  cppcheck  iwyu  request-translations  update-makefile-dep  update-version
tests/: .pylintrc  100x101.djvudump.model  100x101.djvused.orig  100x101.options  Makefile  common.py  common.sh  common.tex  crop-text.djvudump.model  crop-text.djvused.model  crop-text.options  jpeg2tex  test-100x101.jpeg.in  test-100x101.py  test-100x101.sh  test-100x101.tex  test-1px-font.py  test-1px-font.sh  test-1px-font.tex  test-antialias-off.py  test-antialias-off.tex  test-antialias-on.py  test-antialias-on.tex  test-big-outline.py  test-big-outline.tex  test-broken-hyperlinks.py  test-broken-hyperlinks.tex  test-broken-outline.py  test-broken-outline.tex  test-crop-text.py  test-crop-text.sh  test-crop-text.tex  test-dpi-detection.jpeg.in  test-dpi-detection.py  test-dpi-detection.sh  test-dpi-detection.tex  test-duplicate-page-title.py  test-duplicate-page-title.tex  test-duplicate-pages.py  test-duplicate-pages.sh  (+101 more)
tools/: autogen  build-manpage  build-source-tarball  bump-version  crossbuild-win32  encode-manual-page  fix-manpage  generate-makefile-dep  generate-paths-hh  generate-po-template  get-pdf2djvu-version  get-poppler-version  install-manpages  install-mo  install-poppler-h-files  manpage.xsl  source-tarball-from-mercurial  source-tarball-from-subversion  update-version  xml2c
win32/: COPYING.fonts.txt  COPYING.libs.txt  Makefile  freetype-config  xmlexports.h
win32/doc/: COPYING.fonts.txt  COPYING.libs.txt  COPYING.poppler-data.txt
win32/misc/: 30-urw-aliases.conf  dummy-mutex.hh
win32/patches/exiv2/: EXIV2COBJ-no-libtool.diff  EXIV2EXE.diff  EXIVCSRC-no-localtime.diff  disable-pngimage.diff  mutex.diff  series
win32/patches/fontconfig/: disable-uuid-test.diff  no-fc-templatedir.diff  series  test-mkdir.diff
win32/patches/graphicsmagick/: config-paths.diff  no-gm-build.diff  no-modules.diff  no-nt-feature.diff  series
win32/patches/libjpeg/: automake-Wno-obsolete.diff  basetsd.h-conflict.diff  series
win32/patches/poppler/: disable-image-embedding.diff  disable-tests.diff  locale-open.diff  mutex.diff  poppler-data-path.diff  series  strndup.diff
win32/patches/winiconv/: no-const.diff  series
win32/tools/: enforce-relative-paths  wget
